Correct functioning of folding divs on mobile

--- a/basic_style.css
+++ b/basic_style.css
@@ -224,14 +224,6 @@ table high-lulani:hover {
     display: inherit;
   }
 
-  .content div.folding:hover p:first-child::after {
-    content: '\2191\2002 (contract)';
-  }
-
-  .content div.folding:hover p:not(:first-child):not(:last-child) {
-    display: block;
-  }
-
   .content span.tooltip:hover .tooltip-text {
     display: inline;
   }
